; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-subset-vmtx.c_test_subset_vmtx_simple_subset.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/harfbuzz/test/api/extr_test-subset-vmtx.c_test_subset_vmtx_simple_subset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [56 x i8] c"fonts/Mplus1p-Regular.660E,6975,73E0,5EA6,8F38,6E05.ttf\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"fonts/Mplus1p-Regular.660E.ttf\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_subset_vmtx_simple_subset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_subset_vmtx_simple_subset() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = call i32* @hb_subset_test_open_font(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  store i32* %5, i32** %1, align 8
  %6 = call i32* @hb_subset_test_open_font(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  store i32* %6, i32** %2, align 8
  %7 = call i32* (...) @hb_set_create()
  store i32* %7, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @hb_set_add(i32* %8, i32 26126)
  %10 = load i32*, i32** %1, align 8
  %11 = load i32*, i32** %3, align 8
  %12 = call i32 @hb_subset_test_create_input(i32* %11)
  %13 = call i32* @hb_subset_test_create_subset(i32* %10, i32 %12)
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @hb_set_destroy(i32* %14)
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @check_num_vmetrics(i32* %16, i32 1)
  %18 = load i32*, i32** %2, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @HB_TAG(i8 signext 118, i8 signext 109, i8 signext 116, i8 signext 120)
  %21 = call i32 @hb_subset_test_check(i32* %18, i32* %19, i32 %20)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @hb_face_destroy(i32* %22)
  %24 = load i32*, i32** %1, align 8
  %25 = call i32 @hb_face_destroy(i32* %24)
  %26 = load i32*, i32** %2, align 8
  %27 = call i32 @hb_face_destroy(i32* %26)
  ret void
}

declare dso_local i32* @hb_subset_test_open_font(i8*) #1

declare dso_local i32* @hb_set_create(...) #1

declare dso_local i32 @hb_set_add(i32*, i32) #1

declare dso_local i32* @hb_subset_test_create_subset(i32*, i32) #1

declare dso_local i32 @hb_subset_test_create_input(i32*) #1

declare dso_local i32 @hb_set_destroy(i32*) #1

declare dso_local i32 @check_num_vmetrics(i32*, i32) #1

declare dso_local i32 @hb_subset_test_check(i32*, i32*, i32) #1

declare dso_local i32 @HB_TAG(i8 signext, i8 signext, i8 signext, i8 signext) #1

declare dso_local i32 @hb_face_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
